--- a/app.json
+++ b/app.json
@@ -1,26 +1,29 @@
 {
   "expo": {
-    "name": "DoneWithIt",
-    "slug": "DoneWithIt",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "name": "What to Eat!?",
+    "slug": "whattoeat",
+    "version": "4.1.1",
+    "orientation": "default",
+    "icon": "./app/assets/image.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/image.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/logo.png"
+    },
+    "description": "create your own personal cookbook, share your recipes and save other peoples recipes.  create a weekly dinner menu and generate a shopping list based on the menu created",
+    "android": {
+      "package": "com.synthetik023.whattoeat",
+      "versionCode": 5
     }
   }
 }
